Opened 13 years ago

Closed 10 years ago

Last modified 10 years ago

#8898 closed bug (fixed)

[screen_blanker] crashes in BGLView::DirectConnected ()

Reported by: diver Owned by: kallisti5
Priority: normal Milestone: R1/beta1
Component: Add-Ons/Screen Savers Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev44557, gcc2hybrid.

Screen_blanker crashes after exiting from GLife screen saver.

Thread 2638 caused an exception: Segment violation

[Switching to team /boot/system/bin/screen_blanker (2634) thread direct daemon (2638)]
0x01d96dac in BGLView::DirectConnected () from /boot/system/lib/libGL.so
(gdb) bt
#0  0x01d96dac in BGLView::DirectConnected () from /boot/system/lib/libGL.so
#1  0x01d44281 in GLifeSaver::DirectConnected () from /boot/system/add-ons/Screen Savers/GLife
#2  0x00206daf in ScreenSaverWindow::DirectConnected ()
#3  0x0051b285 in BDirectWindow::_DirectDaemon () from /boot/system/lib/libgame.so
#4  0x0051b1ef in BDirectWindow::_daemon_thread () from /boot/system/lib/libgame.so
#5  0x0055d6e3 in thread_entry () from /boot/system/lib/libroot.so
#6  0x78033fec in ?? ()
(gdb)

Attachments (1)

screen_blanker-700-debug-05-01-2013-12-55-35.report (4.6 KB ) - added by diver 12 years ago.

Download all attachments as: .zip

Change History (14)

comment:1 by diver, 12 years ago

Still crashes in hrev45130 with Gravity screen saver.

comment:2 by kallisti5, 12 years ago

strange... never saw this during my testing.

I'm downloading a gcc2 image to test now.

comment:3 by kallisti5, 12 years ago

Could you test again with a later image? I am unable to reproduce this on hrev45129 gcc2hybrid vesa (maybe it's video driver related?)

comment:4 by kallisti5, 12 years ago

nevermind... just saw the hrev45129 note :)

What video driver / resolution / color space are you in?

Example: vesa, 32-bit color, 1024x768

I did see the new swpipe driver suddenly crashing on my intel_extreme machine... but I assumed it was due to my buggy swpipe driver. (gcc2 uses swrast_legacy which should be stable)

comment:5 by diver, 12 years ago

vesa, 32-bit color, 1024x768 it is :-)

comment:6 by diver, 12 years ago

Just click Test button several (5-20) times quick enough and screen_blanker should crash.

comment:7 by kallisti5, 12 years ago

Strange... I couldn't get any of the other screen savers to crash doing this.

I did however finally get gravity to crash like you explained (pressing test over and over)

The crash seems to come while setting EnableDirectMode to false on exit. Seems like some kind of rare locking issue.

I wonder if the same thing happens in the gcc4 image? (it uses a different renderer)

comment:8 by diver, 12 years ago

Reproduced the same crash in BGLView::EnableDirectMode in gcc4 as well as #6484.

comment:9 by kallisti5, 11 years ago

is this still an issue? A lot changed over the last year. (and I haven't seen it)

comment:10 by kallisti5, 11 years ago

Milestone: R1R1/alpha5

comment:11 by pulkomandy, 10 years ago

It won't crash in DirectConnected anymore since the preview window does not use direct mode, but it will crash in various other ways when exiting the preview. Also I could not get it to run fullscreen here. (x86_gcc2, intel_extreme, 1280x800x32)

comment:12 by pulkomandy, 10 years ago

Resolution: fixed
Status: newclosed

All crashes should be fixed now in hrev48012. Reopen if you can still reproduce.

comment:13 by pulkomandy, 10 years ago

Milestone: R1/alpha5R1/beta1
Note: See TracTickets for help on using tickets.