Gravity and GLife: fix crash on start.

Locking the GL context from a GLView subclass constructor can't work, as
it isn't ready yet. Move the initial setup to AttachedToWindow instead.

Fixes #8898, #10469.